<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sea"
    tools:context=".RegisterActivity">

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="485dp"
        android:layout_height="515dp"
        android:layout_marginTop="292dp"
        android:src="@drawable/gif7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/titleRegister"
        android:fontFamily="@font/subject_rounded_bold"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginTop="132dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textColor="@color/Green_1"
        android:textColorHint="@color/DodgerBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputSurname"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textColor="@color/Green_1"
        android:textColorHint="@color/DodgerBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputName" />

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/usernameLogin"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textColor="@color/Green_1"
        android:textColorHint="@color/DodgerBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSurname" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_info_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/Green_1"
        android:textColorHint="@color/DodgerBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUsername" />

    <EditText
        android:id="@+id/inputRepassword"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_info_25"
        android:drawablePadding="8dp"
        android:hint="@string/rePassword"
        android:padding="20dp"
        android:textColor="@color/Green_1"
        android:textColorHint="@color/DodgerBlue"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="544dp"
        android:backgroundTint="@color/DodgerBlue"
        android:drawableLeft="@drawable/ic_baseline_person_add_24"
        android:onClick="submitReg"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/DodgerBlue"
        android:drawableLeft="@drawable/ic_baseline_login_24"
        android:onClick="clickBackToLogin"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

</androidx.constraintlayout.widget.ConstraintLayout>